--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   
     <body>
       <h1>I'm a header 1!</h1>
-        Hello there awesome jbhango!
+      <p>Hello there awesome jbhango!</p>
     </body>
   
 </html>
