--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   
     <body>
       <h1>I'm a header 1!</h1>
+      <img src="https://avatars.githubusercontent.com/u/90853408?v=4">
       <p>Hello there awesome jbhango!</p>
     </body>
   
