--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <body>
       <h1>I'm a header 1!</h1>
       <img src="https://avatars.githubusercontent.com/u/90853408?v=4">
-      <p>Hello there awesome jbhango!</p>
+      <p>Hello there jbhango!</p>
+      <ol>
+        <li>Youtube</li>
+        <li>Netflix</li>
+        <li>amazon</li>
     </body>
   
 </html>
