--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
       <img src="https://avatars.githubusercontent.com/u/90853408?v=4">
       <p>Hello there jbhango!</p>
       <ol>
-        <li>Youtube</li>
-        <li>Netflix</li>
-        <li>amazon</li>
+        <li><a href="https://www.youtube.com/">This is a link to Youtube</a></li>
+        <li><a href="https://www.netflix.com/browse">This is a link to Netflix</a></li>
+        <li><a href="https://www.disneyplus.com/"> This is a link to DisneyPlus</a></li>
       </ol> 
     </body>
   
